@@ -1,135 +1,171 @@
 package copel.sesproductpackage.core.database;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
 import copel.sesproductpackage.core.unit.LogicalOperators;
-import copel.sesproductpackage.core.unit.OriginalDateTime;
 import copel.sesproductpackage.core.unit.Vector;
+import copel.sesproductpackage.core.unit.LogicalOperators.論理演算子;
+import copel.sesproductpackage.core.util.DBConnection;
+import java.lang.reflect.Field;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.MockedStatic;
 
 class SES_AI_T_JOBLotTests {
 
-  @Test
-  void testJOB() throws SQLException {
-    Connection connection = mock(Connection.class);
-    PreparedStatement ps = mock(PreparedStatement.class);
-    ResultSet rs = mock(ResultSet.class);
-    when(connection.prepareStatement(anyString())).thenReturn(ps);
-    when(ps.executeUpdate()).thenReturn(1);
-    when(ps.executeQuery()).thenReturn(rs);
-    when(rs.next()).thenReturn(true, false);
+  private Connection mockConn;
+  private PreparedStatement mockStmt;
+  private ResultSet mockRs;
 
-    SES_AI_T_JOB job = new SES_AI_T_JOB();
-    job.setRegisterDate(new OriginalDateTime());
-    job.setTtl(new OriginalDateTime());
+  @BeforeEach
+  void setUp() throws SQLException {
+    mockConn = mock(Connection.class);
+    mockStmt = mock(PreparedStatement.class);
+    mockRs = mock(ResultSet.class);
 
-    assertEquals(1, job.insert(connection));
-    job.setJobId("J1");
-    assertTrue(job.updateByPk(connection));
-    job.selectByPk(connection);
-    assertTrue(job.deleteByPk(connection));
+    when(mockConn.prepareStatement(anyString())).thenReturn(mockStmt);
+    when(mockStmt.executeQuery()).thenReturn(mockRs);
+  }
 
-    assertEquals("案件ID：J1内容：null", job.to案件選出用文章());
-    assertNotNull(job.toString());
+  private void setupDefaultResultSet() throws SQLException {
+    when(mockRs.next()).thenReturn(true).thenReturn(false);
+    when(mockRs.getString("job_id")).thenReturn("jid1");
+    when(mockRs.getString("from_group")).thenReturn("fg1");
+    when(mockRs.getString("from_id")).thenReturn("fid1");
+    when(mockRs.getString("from_name")).thenReturn("fname1");
+    when(mockRs.getString("raw_content")).thenReturn("raw1");
+    when(mockRs.getString("content_summary")).thenReturn("summary1");
+    when(mockRs.getString("register_date")).thenReturn("2023-01-01 12:00:00");
+    when(mockRs.getString("register_user")).thenReturn("user1");
+    when(mockRs.getString("ttl")).thenReturn("2024-01-01 12:00:00");
+    when(mockRs.getDouble("distance")).thenReturn(0.5);
+  }
+
+  private Vector createTestVector() throws Exception {
+      Vector vector = new Vector(null);
+      Field valueField = Vector.class.getDeclaredField("value");
+      valueField.setAccessible(true);
+      valueField.set(vector, new float[]{1.0f, 2.0f});
+      return vector;
   }
 
   @Test
-  void testJOBLot() throws Exception {
-    Connection connection = mock(Connection.class);
-    PreparedStatement ps = mock(PreparedStatement.class);
-    ResultSet rs = mock(ResultSet.class);
-    when(connection.prepareStatement(anyString())).thenReturn(ps);
-    when(ps.executeQuery()).thenReturn(rs);
-    // Ensure rs.next() returns true for search calls
-    when(rs.next())
-        .thenReturn(
-            true, false, // selectAll
-            true, false, // retrieve(connection, null, 10)
-            true, false, // retrieve(connection, vector, 10)
-            true, false, // searchByRawContent
-            true, false, // selectByAndQuery(multiple)
-            true, false, // selectByAndQuery(empty)
-            true, false, // selectByOrQuery(multiple)
-            true, false, // selectByOrQuery(empty)
-            true, false, // searchByRawContent(ops)
-            true, false, // searchByRawContent(null list)
-            true, false // searchByRawContent(empty list)
-            );
-    when(rs.getString(anyString())).thenReturn("J1");
-    when(rs.getDouble("distance")).thenReturn(0.5);
-
+  void testSelectAll() throws SQLException {
+    setupDefaultResultSet();
     SES_AI_T_JOBLot lot = new SES_AI_T_JOBLot();
-    lot.selectAll(connection);
+    lot.selectAll(mockConn);
+    assertEquals(1, lot.size());
+  }
+
+  @Test
+  void testRetrieve() throws Exception {
+    setupDefaultResultSet();
+    SES_AI_T_JOBLot lot = new SES_AI_T_JOBLot();
+    lot.retrieve(mockConn, createTestVector(), 10);
+    assertEquals(1, lot.size());
+    assertEquals(0.5, lot.get(0).getDistance());
+
+    // Null connection
+    SES_AI_T_JOBLot lotForNull = new SES_AI_T_JOBLot();
+    lotForNull.retrieve(null, null, 0);
+    assertTrue(lotForNull.isEmpty());
+
+    // Null query
+    lot.retrieve(mockConn, null, 1);
+    verify(mockStmt).setString(1, null);
+  }
+
+  @Test
+  void testSearchByRawContentSingle() throws SQLException {
+    setupDefaultResultSet();
+    SES_AI_T_JOBLot lot = new SES_AI_T_JOBLot();
+    lot.searchByRawContent(mockConn, "query");
+    assertEquals(1, lot.size());
+  }
+
+  @Test
+  void testSearchByRawContentMultiple() throws SQLException {
+    setupDefaultResultSet();
+    SES_AI_T_JOBLot lot = new SES_AI_T_JOBLot();
+    List<LogicalOperators> queries = new ArrayList<>();
+    queries.add(new LogicalOperators(論理演算子.AND, "val1"));
+    queries.add(new LogicalOperators(論理演算子.OR, "val2"));
+    lot.searchByRawContent(mockConn, "first", queries);
     assertEquals(1, lot.size());
 
-    // retrieve null connection
-    lot.retrieve(null, null, 10);
-
-    // retrieve null query vector (hits ternary)
-    lot.retrieve(connection, null, 10);
-
-    Vector vector = new Vector(null);
-    java.lang.reflect.Field valueField = Vector.class.getDeclaredField("value");
-    valueField.setAccessible(true);
-    valueField.set(vector, new float[] {0.1f});
-
-    lot.retrieve(connection, vector, 10);
+    // Test with null list
+    setupDefaultResultSet();
+    SES_AI_T_JOBLot lot2 = new SES_AI_T_JOBLot();
+    lot2.searchByRawContent(mockConn, "first", null);
+    assertEquals(1, lot2.size());
+  }
+  
+  @Test
+  void testSelectByAndQuery() throws SQLException {
+    setupDefaultResultSet();
+    SES_AI_T_JOBLot lot = new SES_AI_T_JOBLot();
+    Map<String, String> query = new HashMap<>();
+    query.put("col1", "val1");
+    query.put("col2", "val2");
+    lot.selectByAndQuery(mockConn, query);
     assertEquals(1, lot.size());
 
-    // searchByRawContent
-    lot.searchByRawContent(connection, "q");
+    setupDefaultResultSet();
+    SES_AI_T_JOBLot lot2 = new SES_AI_T_JOBLot();
+    lot2.selectByAndQuery(mockConn, Collections.emptyMap());
+    assertEquals(1, lot2.size());
+  }
+
+  @Test
+  void testSelectByOrQuery() throws SQLException {
+    setupDefaultResultSet();
+    SES_AI_T_JOBLot lot = new SES_AI_T_JOBLot();
+    Map<String, String> query = new HashMap<>();
+    query.put("col1", "val1");
+    query.put("col2", "val2");
+    lot.selectByOrQuery(mockConn, query);
     assertEquals(1, lot.size());
 
-    // selectByAndQuery with multiple params + empty case
-    lot.selectByAndQuery(connection, Map.of("c1", "v1", "c2", "v2"));
-    lot.selectByAndQuery(connection, Map.of()); // tests isFirst
-    assertEquals(1, lot.size());
+    setupDefaultResultSet();
+    SES_AI_T_JOBLot lot2 = new SES_AI_T_JOBLot();
+    lot2.selectByOrQuery(mockConn, Collections.emptyMap());
+    assertEquals(1, lot2.size());
+  }
 
-    // selectByOrQuery with multiple params + empty case
-    lot.selectByOrQuery(connection, Map.of("c1", "v1", "c2", "v2"));
-    lot.selectByOrQuery(connection, Map.of()); // tests isFirst
-    assertEquals(1, lot.size());
-
-    // searchByRawContent with operators (include null operator)
-    List<LogicalOperators> ops = new ArrayList<>();
-    ops.add(new LogicalOperators(LogicalOperators.論理演算子.AND, "q2"));
-    ops.add(null);
-    lot.searchByRawContent(connection, "q1", ops);
-    assertEquals(1, lot.size());
-
-    // searchByRawContent with null operator list
-    try {
-      lot.searchByRawContent(connection, "q1", null);
-    } catch (Exception e) {
-    }
-
-    // searchByRawContent with empty list
-    lot.searchByRawContent(connection, "q1", new ArrayList<>());
-
-    // getEntityByPk edge cases
+  @Test
+  void testGetEntityByPk() throws SQLException {
+    setupDefaultResultSet();
+    SES_AI_T_JOBLot lot = new SES_AI_T_JOBLot();
+    lot.selectAll(mockConn);
+    
+    assertNotNull(lot.getEntityByPk("jid1"));
+    assertNull(lot.getEntityByPk("nonexistent"));
     assertNull(lot.getEntityByPk(null));
-    assertNull(lot.getEntityByPk("MISSING"));
+  }
+  
+  @Test
+  void testTo文章() throws SQLException {
+    setupDefaultResultSet();
+    SES_AI_T_JOBLot lot = new SES_AI_T_JOBLot();
+    lot.selectAll(mockConn);
+    
+    assertFalse(lot.to案件選出用文章().isEmpty());
 
-    // Fresh lot for manual check to avoid collisions with mock search results
-    lot = new SES_AI_T_JOBLot();
-    SES_AI_T_JOB job = new SES_AI_T_JOB();
-    job.setJobId("J1");
-    job.setFromGroup("J1");
-    job.setFromId("J1");
-    job.setFromName("J1");
-    job.setRawContent("J1");
-    job.setContentSummary("J1");
-    job.setRegisterUser("J1");
-    lot.add(job);
-    assertEquals(job, lot.getEntityByPk("J1"));
-    assertNotNull(lot.to案件選出用文章());
+    // Empty lot
+    SES_AI_T_JOBLot emptyLot = new SES_AI_T_JOBLot();
+    assertTrue(emptyLot.to案件選出用文章().isEmpty());
   }
 }
